ran C wrapper through Valgrind to fix memory leaks

--- a/wrappers/C/SConstruct
+++ b/wrappers/C/SConstruct
@@ -8,4 +8,5 @@ env = Environment()
 ## build the test program for the C wrapper
 ## Feff libraries should have already been installed
 env.Program('makepath', 'makepath.c',
+            CFLAGS = ['-g',],
             LIBS = ['feffpath'])
