more work with valgrind to clean up error reporting

--- a/wrappers/C/SConstruct
+++ b/wrappers/C/SConstruct
@@ -10,3 +10,7 @@ env = Environment()
 env.Program('makepath', 'makepath.c',
             CFLAGS = ['-g',],
             LIBS = ['feffpath'])
+
+env.Program('errors', 'errors.c',
+            CFLAGS = ['-g',],
+            LIBS = ['feffpath'])
