--- a/src/SConstruct
+++ b/src/SConstruct
@@ -14,6 +14,7 @@ print "\tinstallation prefix is: " + ienv['i_prefix'] +"\n"
 SConscript([
             'PAR/SConstruct',
             'COMMON/SConstruct',
+            'json-fortran/SConstruct',
             'JSON/SConstruct',
             'MATH/SConstruct',
             'ATOM/SConstruct',
