--- a/src/json-fortran/SConstruct
+++ b/src/json-fortran/SConstruct
@@ -7,14 +7,12 @@
 #  deals gracefully with robodoc not being installed on the system.
 #
 
-from distutils.spawn import find_executable
 import os
 from os.path import join
+from SCons.Environment import Environment
 
-from FeffBuild import CompilationEnvironment, InstallEnvironment
-
-env  = CompilationEnvironment()
-here = 'json-fortran'
+env  = Environment()
+here = '.'
 
 if env['FORTRAN'] == 'gfortran':
     env = Environment(F90FLAGS = '-O2 -fbacktrace -g -Wall -Wextra -Wno-maybe-uninitialized -pedantic -std=f2008 -J'+here,)
@@ -43,4 +41,3 @@ else:
 
 env.Install(libinstall, [ar,mod])
 env.Alias('install', libinstall)
-
